angular app implemented

--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -67,10 +67,11 @@
             	
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text">
-                        <h1 class="wow fadeInLeftBig">Sentryturret</h1>
+                        <h1 class="wow fadeInLeftBig">Bootstrap 4 Website Tutorial</h1>
                         <div class="description wow fadeInLeftBig">
                         	<p>
-                                Destroy Your enemy's armored vehicles with just a click of button! 
+                         	This is a free responsive one page template made with the Bootstrap framework. 
+                         	Check it out now. Download it, customize and use it as you like!
                         	</p>
                         </div>
                         <div class="top-big-link wow fadeInUp">
@@ -161,7 +162,7 @@
 	                </div>
 	                <div class="col-12 col-lg-5 about-us-box wow fadeInUp">
 	                	<div class="about-us-box-img">
-	                    	<img src="assets/img/about/turret1.jpg" alt="about" data-at2x="assets/img/about/turret1.jpg">
+	                    	<img src="assets/img/about/1.jpg" alt="about" data-at2x="assets/img/about/1.jpg">
 	                    </div>
 	                </div>
 	            </div>
