--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -67,8 +67,9 @@
             	
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text">
-						<!--h1 class="wow fadeInLeftBig">SentryTurret</h1-->
-						<img src="assets/img/background/logo.svg" alt="SentryTurret logo" />
+						<div class="wow fadeInLeftBig">
+								<img src="assets/img/backgrounds/logo.svg" height="150px" alt="Logo" />
+						</div>
                         <div class="description wow fadeInLeftBig">
                         	<p>
                          		Most affordable anti-tank equipment everyone can have
@@ -132,6 +133,10 @@
 					</div>
 				</div>
 	        </div>
+		</div>
+
+		<div class="videocontainer">
+			<iframe  class="video" src="//www.youtube.com/embed/hZxCtAaXivM" frameborder="0" allowfullscreen></iframe>
 		</div>
 		
 		<!--
