--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -89,7 +89,7 @@
 	                    <h3><strong>SENTRTYTURRET</strong> is lightweight, low-cost remotely controlled aiming systems for AT4 Anti-Tank missle launcher.</h3>
 					</div>
 					<div class="col-md-4 services section-description wow fadeIn">
-						<img src="assets/img/backgrounds/turret-mockup.jpg" alt="AT4" />
+						<img src="assets/img/backgrounds/Turret_mockup-2-v2.png" alt="AT4" />
 					</div>
 	            </div>
 	            <div class="row">
@@ -133,6 +133,47 @@
 					</div>
 				</div>
 	        </div>
+		</div>
+
+		<!-- Services -->
+		<div class="services-container section-container">
+			<div class="container">
+				<div>
+					<h2><strong>Set it up in 4 easy steps!</h2>
+				</div>
+
+				<div class="row">
+					<div class="row col-md-6">
+						<div class="col-md-6">
+							<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="" />
+						</div>
+						<div class="col-md-6" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+					</div>
+					<div class="row col-md-6">
+						<div class="col-md-6">
+							<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="" />
+						</div>
+						<div class="col-md-6" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+					</div>
+					<div class="row  col-md-6">
+						<div class="col-md-6">
+							<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="" />
+						</div>
+						<div class="col-md-6" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+					</div>
+					<div class="row  col-md-6">
+						<div class="col-md-6">
+							<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="" />
+						</div>
+						<div class="col-md-6" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12 fadeInDown" style="margin-top: 40px;">
+						<img src="assets/img/backgrounds/buy-now.png" alt="Buy now!" />
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<div class="videocontainer">
