--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -135,14 +135,35 @@
 	        </div>
 		</div>
 
-		<!-- Services -->
-		<div class="services-container section-container">
+		<div class="opinion">
+			<div class="container">
+				<div class="row" style="padding: 30px;">
+					<div class="col-md-4">
+						<img src="assets/img/backgrounds/important-guy.svg" alt="" />
+					</div>
+					<div class="col-md-8">
+						<div class="description wow fadeInLeftBig" style="text-align: left;">
+							<p style="color: white;">
+								"It saves most valuable asset on combat ground - our people's lives. It can not be overestimated!"
+							</p>
+							<p style="color: white;"><strong>Col. John Smith,</strong> NATO operation officer</p>
+						</div>
+					</div>
+				</div>
+			</div>            
+		</div>
+
+		<div class="videocontainer">
+			<iframe  class="video" src="//www.youtube.com/embed/hZxCtAaXivM" frameborder="0" allowfullscreen></iframe>
+		</div>
+		
+		<!-- Steps -->
+		<div class="services-container section-container" style="padding: 60px;">
 			<div class="container">
 				<div>
 					<h2><strong>Set it up in 4 easy steps!</h2>
 				</div>
-
-				<div class="row">
+				<div class="row" style="padding: 30px;">
 					<div class="row col-md-6">
 						<div class="col-md-6">
 							<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="" />
@@ -175,14 +196,6 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="videocontainer">
-			<iframe  class="video" src="//www.youtube.com/embed/hZxCtAaXivM" frameborder="0" allowfullscreen></iframe>
-		</div>
-		
-		<!--
-		<iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-		-->
 
         <!-- Footer -->
         <footer>
