--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -35,7 +35,7 @@
 				<a class="navbar-brand" href="index.html">Bootstrap 4 One Page Website Tutorial</a>
 			    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			        <span class="navbar-toggler-icon"></span>
-			    </button>
+				</button>
 			    <div class="collapse navbar-collapse" id="navbarNav">
 			        <ul class="navbar-nav ml-auto">
 			            <li class="nav-item">
@@ -56,14 +56,15 @@
         <div class="top-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 offset-md-2 text">
-						<div class="wow fadeInLeftBig">
-								<img src="assets/img/backgrounds/logo.svg" height="150px" alt="Logo" />
+                    <div class="col-md-12">
+						<div class="wow zoomIn">
+							<img src="assets/img/backgrounds/logo.png" height="100px" alt="Logo" />
 						</div>
-                        <div class="description wow fadeInLeftBig">
-                        	<p>
+						<div class="wow slideInLeft"><h1 style="color: #B8E986;">SentryTurret</h1></div>
+                        <div class="description wow slideInRight">
+                        	<h3>
                          		Most affordable anti-tank equipment everyone can have
-                        	</p>
+                        	</h3>
                         </div>
                     </div>
                 </div>
@@ -74,44 +75,44 @@
         <div class="services-container section-container">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-md-8 services section-description wow fadeIn" style="text-align: left;">
-	                    <h3><strong>SENTRTYTURRET</strong> is lightweight, low-cost remotely controlled aiming systems for AT4 Anti-Tank missle launcher.</h3>
+	                <div class="col-md-6 services section-description wow fadeIn" style="text-align: left;">
+	                    <h3 style="font-family: WorkSans; "><span style="padding: 3px; background-color: darkolivegreen; ">SENTRTYTURRET is lightweight, low-cost remotely controlled aiming systems for AT4 Anti-Tank missle launcher.</span></h3>
 					</div>
-					<div class="col-md-4 services section-description wow fadeIn">
+					<div class="col-md-6 services section-description wow fadeIn">
 						<img src="assets/img/backgrounds/Turret_mockup-2-v2.png" alt="AT4" />
 					</div>
 	            </div>
 	            <div class="row">
-                	<div class="column services-box wow fadeInLeft">
+                	<div class="col-md-4 services-box wow fadeInLeft">
                 		<div class="column">
                 			<div class="col-md-12">
 			                	<img src="assets/img/backgrounds/icon-lightweight.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
 	                    		<h3>Lightweight & affordable</h3>
-	                    		<p>Weighs less than an average laptop computer</p>
+	                    		<p>Weighs less than an average laptop computer.</p>
 	                    	</div>
 	                    </div>
                     </div>
-                    <div class="column services-box wow fadeInUp">
+                    <div class="col-md-4 services-box wow fadeInUp">
 	                	<div class="column">
                 			<div class="col-md-12">
 								<img src="assets/img/backgrounds/icon-easy.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
 	                    		<h3>Easy to use</h3>
-	                    		<p>Can be set up in less than 1 minute. Supports iOS & Android</p>
+	                    		<p>Can be set up in less than 1 minute. Supports iOS & Android.</p>
 	                    	</div>
 	                    </div>
                     </div>
-                    <div class="column services-box wow fadeInRight">
+                    <div class="col-md-4 services-box wow fadeInRight">
 	                	<div class="column">
                 			<div class="col-md-12">
 								<img src="assets/img/backgrounds/icon-buy-online.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
 	                    		<h3>Buy online</h3>
-	                    		<p>Buy easily or locate your nearest dealer</p>
+	                    		<p>Buy easily or locate your nearest dealer.</p>
 	                    	</div>
 	                    </div>
                     </div>
@@ -132,9 +133,9 @@
 					</div>
 					<div class="col-md-8">
 						<div class="description wow fadeInRightBig" style="text-align: left;">
-							<p style="color: white;">
+							<h3 style="color: white;">
 								"It saves most valuable asset on combat ground - our people's lives. It can not be overestimated!"
-							</p>
+							</h3>
 							<p style="color: white;"><strong>Col. John Smith,</strong> NATO operation officer</p>
 						</div>
 					</div>
@@ -157,25 +158,25 @@
 						<div class="col-md-4">
 							<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="" />
 						</div>
-						<div class="col-md-8" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
 					</div>
 					<div class="row col-md-6" style="margin-top: 20px;">
 						<div class="col-md-4">
 							<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="" />
 						</div>
-						<div class="col-md-8" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
 					</div>
 					<div class="row  col-md-6" style="margin-top: 20px;">
 						<div class="col-md-4">
 							<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="" />
 						</div>
-						<div class="col-md-8" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
 					</div>
 					<div class="row col-md-6" style="margin-top: 20px;">
 						<div class="col-md-4">
 							<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="" />
 						</div>
-						<div class="col-md-8" style="text-align: left;">Place the mount & attach the AT-4 weapon</div>
+						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
 					</div>
 				</div>
 				<div class="row wow fadeInRight">
