most of the alignment is okay

--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -74,44 +74,44 @@
         <!-- Services -->
         <div class="services-container section-container">
 	        <div class="container">
-	            <div class="row">
-	                <div class="col-md-6 services section-description wow fadeIn" style="text-align: left;">
+	            <div class="row" style="display: flex; align-items: center;">
+	                <div class="col-md-6 services section-description wow slideInLeft" style="text-align: left;">
 	                    <h3 style="font-family: WorkSans; "><span style="padding: 3px; background-color: darkolivegreen; ">SENTRTYTURRET is lightweight, low-cost remotely controlled aiming systems for AT4 Anti-Tank missle launcher.</span></h3>
 					</div>
-					<div class="col-md-6 services section-description wow fadeIn">
+					<div class="col-md-6 services section-description wow slideInRight">
 						<img src="assets/img/backgrounds/Turret_mockup-2-v2.png" alt="AT4" />
 					</div>
 	            </div>
 	            <div class="row">
                 	<div class="col-md-4 services-box wow fadeInLeft">
-                		<div class="column">
+                		<div class="column" style="text-align: center">
                 			<div class="col-md-12">
 			                	<img src="assets/img/backgrounds/icon-lightweight.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
-	                    		<h3>Lightweight & affordable</h3>
+	                    		<h3 style="color: #203E24">Lightweight & affordable</h3>
 	                    		<p>Weighs less than an average laptop computer.</p>
 	                    	</div>
 	                    </div>
                     </div>
                     <div class="col-md-4 services-box wow fadeInUp">
-	                	<div class="column">
+	                	<div class="column" style="text-align: center">
                 			<div class="col-md-12">
 								<img src="assets/img/backgrounds/icon-easy.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
-	                    		<h3>Easy to use</h3>
+	                    		<h3 style="color: #203E24">Easy to use</h3>
 	                    		<p>Can be set up in less than 1 minute. Supports iOS & Android.</p>
 	                    	</div>
 	                    </div>
                     </div>
                     <div class="col-md-4 services-box wow fadeInRight">
-	                	<div class="column">
+	                	<div class="column" style="text-align: center">
                 			<div class="col-md-12">
 								<img src="assets/img/backgrounds/icon-buy-online.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
-	                    		<h3>Buy online</h3>
+	                    		<h3 style="color: #203E24">Buy online</h3>
 	                    		<p>Buy easily or locate your nearest dealer.</p>
 	                    	</div>
 	                    </div>
@@ -127,7 +127,7 @@
 
 		<div class="opinion">
 			<div class="container">
-				<div class="row" style="padding: 30px;">
+				<div class="row" style="padding: 30px; display: flex; align-items: center;">
 					<div class="col-md-4 wow fadeInLeftBig">
 						<img src="assets/img/backgrounds/important-guy.svg" alt="" />
 					</div>
@@ -151,7 +151,7 @@
 		<div class="services-container section-container" style="padding: 60px;">
 			<div class="container">
 				<div class="wow fadeInLeft">
-					<h2><strong>Set it up in 4 easy steps!</h2>
+					<h2 style="color: #203E24"><strong>Set it up in 4 easy steps!</h2>
 				</div>
 				<div class="row" style="padding: 30px;">
 					<div class="row col-md-6" style="margin-top: 20px;">
