text background-id olemas

--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -76,7 +76,7 @@
 	        <div class="container">
 	            <div class="row" style="display: flex; align-items: center;">
 	                <div class="col-md-6 services section-description wow slideInLeft" style="text-align: left;">
-	                    <h3 style="font-family: WorkSans; "><span style="padding: 3px; background-color: darkolivegreen; ">SENTRTYTURRET is lightweight, low-cost remotely controlled aiming systems for AT4 Anti-Tank missle launcher.</span></h3>
+	                    <h3 style="font-family: WorkSans; "><span style="padding: 3px 5px 3px 5px; background-color: darkolivegreen;">SENTRTYTURRET is lightweight, low-cost remotely controlled aiming systems for AT4 Anti-Tank missle launcher.</span></h3>
 					</div>
 					<div class="col-md-6 services section-description wow slideInRight">
 						<img src="assets/img/backgrounds/Turret_mockup-2-v2.png" alt="AT4" />
@@ -154,29 +154,29 @@
 					<h2 style="color: #203E24"><strong>Set it up in 4 easy steps!</h2>
 				</div>
 				<div class="row" style="padding: 30px;">
-					<div class="row col-md-6" style="margin-top: 20px;">
-						<div class="col-md-4">
-							<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="" />
+					<div class="row col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-md-2">
+							<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="1" />
 						</div>
-						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
+						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Place the mount & attach the AT-4 weapon.</span></p></div>
 					</div>
-					<div class="row col-md-6" style="margin-top: 20px;">
-						<div class="col-md-4">
-							<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="" />
+					<div class="row col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-md-2">
+							<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="2" />
 						</div>
-						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
+						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Connect the firing mechanism, camera and cables.</span></p></div>
 					</div>
-					<div class="row  col-md-6" style="margin-top: 20px;">
-						<div class="col-md-4">
-							<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="" />
+					<div class="row  col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-md-2">
+							<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="3" />
 						</div>
-						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
+						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Open SentryTurret app on your phone.</span></p></div>
 					</div>
-					<div class="row col-md-6" style="margin-top: 20px;">
-						<div class="col-md-4">
-							<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="" />
+					<div class="row col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-md-2">
+							<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="4" />
 						</div>
-						<div class="col-md-8" style="text-align: left;"><p>Place the mount & attach the AT-4 weapon</p></div>
+						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Arm the weapon. Operate using your smartphone.</span></p></div>
 					</div>
 				</div>
 				<div class="row wow fadeInRight">
