before adding the guy with AT4

--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -20,10 +20,6 @@
 
         <!-- Favicon and touch icons -->
         <link rel="shortcut icon" href="assets/ico/favicon.png">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
     </head>
 
@@ -32,7 +28,7 @@
 		<!-- Top menu -->
 		<nav class="navbar navbar-dark fixed-top navbar-expand-md navbar-no-bg">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Bootstrap 4 One Page Website Tutorial</a>
+				<a class="navbar-brand" href="index.html">SentryTurret</a>
 			    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			        <span class="navbar-toggler-icon"></span>
 				</button>
@@ -89,7 +85,7 @@
 			                	<img src="assets/img/backgrounds/icon-lightweight.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
-	                    		<h3 style="color: #203E24">Lightweight & affordable</h3>
+	                    		<h3 style="color: #203E24; margin-top: 10px;">Lightweight & affordable</h3>
 	                    		<p>Weighs less than an average laptop computer.</p>
 	                    	</div>
 	                    </div>
@@ -100,7 +96,7 @@
 								<img src="assets/img/backgrounds/icon-easy.svg" alt="" />
 		                	</div>
 	                		<div class="col-md-12">
-	                    		<h3 style="color: #203E24">Easy to use</h3>
+	                    		<h3 style="color: #203E24; margin-top: 10px;">Easy to use</h3>
 	                    		<p>Can be set up in less than 1 minute. Supports iOS & Android.</p>
 	                    	</div>
 	                    </div>
@@ -110,7 +106,7 @@
                 			<div class="col-md-12">
 								<img src="assets/img/backgrounds/icon-buy-online.svg" alt="" />
 		                	</div>
-	                		<div class="col-md-12">
+	                		<div class="col-md-12; margin-top: 10px;">
 	                    		<h3 style="color: #203E24">Buy online</h3>
 	                    		<p>Buy easily or locate your nearest dealer.</p>
 	                    	</div>
@@ -118,8 +114,8 @@
                     </div>
 				</div>
 				<div class="row">
-					<div class="col-md-12 fadeInDown" style="margin-top: 40px;">
-						<img src="assets/img/backgrounds/buy-now.png" alt="Buy now!" />
+					<div class="col-md-12 wow zoomIn" style="margin-top: 40px;">
+						<a href="#"><img src="assets/img/backgrounds/buy-now.png" alt="Buy now!" /></a>
 					</div>
 				</div>
 	        </div>
@@ -127,7 +123,7 @@
 
 		<div class="opinion">
 			<div class="container">
-				<div class="row" style="padding: 30px; display: flex; align-items: center;">
+				<div class="row" style="padding: 60px; display: flex; align-items: center;">
 					<div class="col-md-4 wow fadeInLeftBig">
 						<img src="assets/img/backgrounds/important-guy.svg" alt="" />
 					</div>
@@ -154,34 +150,34 @@
 					<h2 style="color: #203E24"><strong>Set it up in 4 easy steps!</h2>
 				</div>
 				<div class="row" style="padding: 30px;">
-					<div class="row col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
-						<div class="col-md-2">
+					<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-sm-12 col-md-2">
 							<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="1" />
 						</div>
 						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Place the mount & attach the AT-4 weapon.</span></p></div>
 					</div>
-					<div class="row col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
-						<div class="col-md-2">
+					<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-sm-12 col-md-2">
 							<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="2" />
 						</div>
-						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Connect the firing mechanism, camera and cables.</span></p></div>
+						<div class="col-sm-12 col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Connect the firing mechanism, camera and cables.</span></p></div>
 					</div>
-					<div class="row  col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
-						<div class="col-md-2">
+					<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-sm-12 col-md-2">
 							<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="3" />
 						</div>
-						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Open SentryTurret app on your phone.</span></p></div>
+						<div class="col-sm-12 col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Open SentryTurret app on your phone.</span></p></div>
 					</div>
-					<div class="row col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
-						<div class="col-md-2">
+					<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+						<div class="col-sm-12 col-md-2">
 							<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="4" />
 						</div>
-						<div class="col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Arm the weapon. Operate using your smartphone.</span></p></div>
+						<div class="col-sm-12 col-md-10" style="text-align: left;"><p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A">Arm the weapon. Operate using your smartphone.</span></p></div>
 					</div>
 				</div>
-				<div class="row wow fadeInRight">
-					<div class="col-md-12 fadeInDown" style="margin-top: 40px;">
-						<img src="assets/img/backgrounds/buy-now.png" alt="Buy now!" />
+				<div class="row">
+					<div class="col-md-12 wow zoomIn" style="margin-top: 40px;">
+						<a href="#"><img src="assets/img/backgrounds/buy-now.png" alt="Buy now!" /></a>
 					</div>
 				</div>
 			</div>
