pretty okay currently

--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
-        <title>Bootstrap 4 One Page Website Tutorial</title>
+        <title>SentryTurret</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
@@ -56,11 +56,11 @@
 						<div class="wow zoomIn">
 							<img src="assets/img/backgrounds/logo.png" height="100px" alt="Logo" />
 						</div>
-						<div class="wow slideInLeft"><h1 style="color: #B8E986;">SentryTurret</h1></div>
+						<div class="wow slideInLeft"><h1>SentryTurret</h1></div>
                         <div class="description wow slideInRight">
-                        	<h3>
+                        	<h2>
                          		Most affordable anti-tank equipment everyone can have
-                        	</h3>
+                        	</h2>
                         </div>
                     </div>
                 </div>
@@ -124,11 +124,11 @@
 		<div class="opinion">
 			<div class="container">
 				<div class="row" style="padding: 60px; display: flex; align-items: center;">
-					<div class="col-md-4 wow fadeInLeftBig">
+					<div class="col-md-4 wow fadeInLeft">
 						<img src="assets/img/backgrounds/important-guy.svg" alt="" />
 					</div>
 					<div class="col-md-8">
-						<div class="description wow fadeInRightBig" style="text-align: left;">
+						<div class="description wow fadeInRight" style="text-align: left;">
 							<h3 style="color: white;">
 								"It saves most valuable asset on combat ground - our people's lives. It can not be overestimated!"
 							</h3>
@@ -188,7 +188,11 @@
 	        <div class="container footer">
 	        	<div class="row">
                     <div class="col-md-5 footer-left">
-                    	<p>SentryTurret &copy; 2018</p>
+						<p>
+							<a href="mailto:kjarvan@gmail.com" style="border-bottom: none">Kristjan Järvan</a> 
+							<br />
+							SentryTurret &copy; 2018
+						</p>
                     </div>
                     <div class="col-md-6 offset-md-1 footer-right">
                     	<a href="https://www.facebook.com/Sentry-Turret-733783123668847"><i class="fab fa-facebook-f"></i></a>
