--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -59,7 +59,7 @@
 						<div class="wow slideInLeft"><h1>SentryTurret</h1></div>
                         <div class="description wow slideInRight">
                         	<h2>
-                         		Most affordable anti-tank equipment everyone can have
+                         		Most affordable anti-tank equipment on the market
                         	</h2>
                         </div>
                     </div>
@@ -67,12 +67,16 @@
             </div>            
         </div>
         
-        <!-- Services -->
         <div class="services-container section-container">
 	        <div class="container">
 	            <div class="row" style="display: flex; align-items: center;">
-	                <div class="col-md-6 services section-description wow slideInLeft" style="text-align: left;">
-	                    <h3 style="font-family: WorkSans; "><span style="padding: 3px 5px 3px 5px; background-color: darkolivegreen;">SENTRTYTURRET is lightweight, low-cost remotely controlled aiming systems for AT4 Anti-Tank missle launcher.</span></h3>
+					<div class="column col-md-6 services section-description wow slideInLeft" style="text-align: left;">
+						<div class="col-md-12">
+							<h3 style="font-family: WorkSans; "><span style="padding: 3px 5px 3px 5px; background-color: darkolivegreen;">SENTRTYTURRET is a lightweight, low-cost remotely controlled aiming system for the AT4 Anti-Tank missile launcher.</span></h3>
+						</div>
+	                    <div class="col-md-12" style="margin-top: 40px;">
+							<a class="scroll-link" href="#"><h3 style="color: #81A14F;">READ MORE </span><i class="fas fa-chevron-down"></i></h3></a>
+						</div>
 					</div>
 					<div class="col-md-6 services section-description wow slideInRight">
 						<img src="assets/img/backgrounds/Turret_mockup-2-v2.png" alt="AT4" />
@@ -82,10 +86,10 @@
                 	<div class="col-md-4 services-box wow fadeInLeft">
                 		<div class="column" style="text-align: center">
                 			<div class="col-md-12">
-			                	<img src="assets/img/backgrounds/icon-lightweight.svg" alt="" />
+			                	<img src="assets/img/backgrounds/icon-lightweight.svg" alt="Lightweight" />
 		                	</div>
 	                		<div class="col-md-12">
-	                    		<h3 style="color: #203E24; margin-top: 10px;">Lightweight & affordable</h3>
+	                    		<h3 style="color: #203E24; margin-top: 12px;">Lightweight & affordable</h3>
 	                    		<p>Weighs less than an average laptop computer.</p>
 	                    	</div>
 	                    </div>
@@ -93,10 +97,10 @@
                     <div class="col-md-4 services-box wow fadeInUp">
 	                	<div class="column" style="text-align: center">
                 			<div class="col-md-12">
-								<img src="assets/img/backgrounds/icon-easy.svg" alt="" />
+								<img src="assets/img/backgrounds/icon-easy.svg" alt="Easy" />
 		                	</div>
 	                		<div class="col-md-12">
-	                    		<h3 style="color: #203E24; margin-top: 10px;">Easy to use</h3>
+	                    		<h3 style="color: #203E24; margin-top: 12px;">Easy to use</h3>
 	                    		<p>Can be set up in less than 1 minute. Supports iOS & Android.</p>
 	                    	</div>
 	                    </div>
@@ -104,11 +108,11 @@
                     <div class="col-md-4 services-box wow fadeInRight">
 	                	<div class="column" style="text-align: center">
                 			<div class="col-md-12">
-								<img src="assets/img/backgrounds/icon-buy-online.svg" alt="" />
+								<img src="assets/img/backgrounds/icon-buy-online.svg" alt="Buy online" />
 		                	</div>
-	                		<div class="col-md-12; margin-top: 10px;">
-	                    		<h3 style="color: #203E24">Buy online</h3>
-	                    		<p>Buy easily or locate your nearest dealer.</p>
+	                		<div class="col-md-12">
+	                    		<h3 style="color: #203E24; margin-top: 12px;">Buy online</h3>
+	                    		<p>Purchase online or locate your nearest dealer.</p>
 	                    	</div>
 	                    </div>
                     </div>
@@ -130,7 +134,7 @@
 					<div class="col-md-8">
 						<div class="description wow fadeInRight" style="text-align: left;">
 							<h3 style="color: white;">
-								"It saves most valuable asset on combat ground - our people's lives. It can not be overestimated!"
+								"It helps protect our most valuable assest - our people. It can not be underestimated!"
 							</h3>
 							<p style="color: white;"><strong>Col. John Smith,</strong> NATO operation officer</p>
 						</div>
