--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -62,8 +62,8 @@
 						<h1>SentryTurret</h1>
 					</div>
 					<div class="description wow slideInRight">
-						<h2>
-							Most affordable anti-tank equipment on the market
+						<h2>Aim from distance & stay alive.<br />
+							Surviving has never before been so affordable.
 						</h2>
 					</div>
 				</div>
@@ -76,7 +76,7 @@
 			<div class="row" style="display: flex; align-items: center;">
 				<div class="column col-md-6 services section-description wow slideInLeft" style="text-align: left;">
 					<div class="col-md-12">
-						<h3 style="font-family: WorkSans; "><span style="padding: 3px 5px 3px 5px; background-color: darkolivegreen;">SENTRTYTURRET
+						<h3 style="font-family: WorkSans; "><span style="padding: 3px 5px 3px 5px; background-color: #203E24; line-height: 1.7;">SENTRTYTURRET
 								is a lightweight, low-cost remotely controlled aiming system for the AT4 Anti-Tank missile launcher.</span></h3>
 					</div>
 					<div class="col-md-12" style="margin-top: 40px;">
@@ -158,42 +158,46 @@
 	<div class="services-container section-container" style="padding: 60px;">
 		<div class="container">
 			<div class="wow fadeInLeft">
-				<h2 style="color: #203E24"><strong>Set it up in 4 easy steps!</strong></h2>
+				<h2 style="color: #203E24">Set it up in 4 easy steps!</h2>
 			</div>
 			<div class="row" style="padding: 30px;">
-				<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2">
 						<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="1" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A"><strong>Place the mount &
+						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Place
+									the mount &
 									attach the AT-4 weapon.</strong></span></h4>
 					</div>
 				</div>
-				<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2">
 						<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="2" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A"><strong>Connect the firing
+						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Connect
+									the firing
 									mechanism, camera and cables.</strong></span></h4>
 					</div>
 				</div>
-				<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2">
 						<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="3" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A"><strong>Open the
+						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Open
+									the
 									SentryTurret app on your phone.</strong></span></h4>
 					</div>
 				</div>
-				<div class="row col-sm-12 col-md-6" style="margin-top: 20px; display: flex; align-items: center;">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2">
 						<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="4" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A"><strong>Arm the weapon.
+						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Arm
+									the weapon.
 									Operate using your smartphone.</strong></span></h4>
 					</div>
 				</div>
@@ -206,14 +210,13 @@
 		</div>
 	</div>
 
-
 	<div class="container">
 		<div class="row" style="padding-bottom: 60px;">
 			<div class="col-md-6 wow fadeInLeft" style="padding-right: 0px; padding-left: 0px;">
 				<img src="assets/img/backgrounds/ShotShow_ad_left_v1.png" alt="AdLeft" />
 			</div>
 			<div class="col-md-6 wow fadeInRight" style="padding-right: 0px; padding-left: 0px;">
-				<img src="assets/img/backgrounds/right.png" alt="AdRight" />
+				<img src="assets/img/backgrounds/ShotShow_ad_right_v1.png" alt="AdRight" />
 			</div>
 		</div>
 	</div>
