--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -56,7 +56,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="wow zoomIn">
-						<img src="assets/img/backgrounds/logo.png" height="100px" alt="Logo" />
+						<img src="assets/img/backgrounds/logo.png" height="120px" alt="Logo" />
 					</div>
 					<div class="wow slideInLeft">
 						<h1>SentryTurret</h1>
@@ -81,7 +81,7 @@
 					</div>
 					<div class="col-md-12" style="margin-top: 40px;">
 						<a class="scroll-link" href="#">
-							<h3 style="color: #81A14F;">READ MORE </span><i class="fas fa-chevron-down"></i></h3>
+							<h3 style="color: #81A14F">READ MORE </span><i class="fas fa-chevron-down"></i></h3>
 						</a>
 					</div>
 				</div>
@@ -132,6 +132,7 @@
 		</div>
 	</div>
 
+	<!-- Opinion -->
 	<div class="opinion">
 		<div class="container">
 			<div class="row" style="padding: 60px; display: flex; align-items: center;">
@@ -161,44 +162,44 @@
 				<h2 style="color: #203E24">Set it up in 4 easy steps!</h2>
 			</div>
 			<div class="row" style="padding: 30px;">
-				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
-					<div class="col-sm-2 col-md-2">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
+					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
 						<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="1" />
 					</div>
-					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Place
+					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
+						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Place
 									the mount &
-									attach the AT-4 weapon.</strong></span></h4>
+									attach the AT-4 weapon.</strong></span></p>
 					</div>
 				</div>
-				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
-					<div class="col-sm-2 col-md-2">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
+					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
 						<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="2" />
 					</div>
-					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Connect
+					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
+						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Connect
 									the firing
-									mechanism, camera and cables.</strong></span></h4>
+									mechanism, camera and cables.</strong></span></p>
 					</div>
 				</div>
-				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
-					<div class="col-sm-2 col-md-2">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
+					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
 						<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="3" />
 					</div>
-					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Open
+					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
+						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Open
 									the
-									SentryTurret app on your phone.</strong></span></h4>
+									SentryTurret app on your phone.</strong></span></p>
 					</div>
 				</div>
-				<div class="row col-sm-12 col-md-6" style="margin-top: 30px; display: flex; align-items: center;">
-					<div class="col-sm-2 col-md-2">
+				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
+					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
 						<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="4" />
 					</div>
-					<div class="col-sm-10 col-md-10" style="text-align: left;">
-						<h4><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Arm
+					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
+						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Arm
 									the weapon.
-									Operate using your smartphone.</strong></span></h4>
+									Operate using your smartphone.</strong></span></p>
 					</div>
 				</div>
 			</div>
