--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -137,14 +137,14 @@
 		<div class="container">
 			<div class="row" style="padding: 60px; display: flex; align-items: center;">
 				<div class="col-md-4 wow fadeInLeft">
-					<img src="assets/img/backgrounds/important-guy.svg" alt="" />
+					<img src="assets/img/backgrounds/profile-image.png" alt="" />
 				</div>
 				<div class="col-md-8">
 					<div class="description wow fadeInRight" style="text-align: left;">
 						<h3 style="color: white;">
-							"It helps protect our most valuable assest - our people. It can not be underestimated!"
+							"Every single soldier's life matters, let's save that!"
 						</h3>
-						<p style="color: white;"><strong>Col. John Smith,</strong> NATO operation officer</p>
+						<p style="color: white;"><strong>Capt. Vladimir Kolotõgin,</strong> Anti-Tank Company Commander</p>
 					</div>
 				</div>
 			</div>
