--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -228,18 +228,20 @@
 			<div class="row">
 				<div class="col-md-5 footer-left">
 					<p>
+						Contact
+							<br />
 						<a href="mailto:kjarvan@gmail.com" style="border-bottom: none">Kristjan Järvan</a>
-						<br />
-						SentryTurret &copy; 2018
 					</p>
 				</div>
 				<div class="col-md-6 offset-md-1 footer-right">
-					<a href="https://www.facebook.com/Sentry-Turret-733783123668847"><i class="fab fa-facebook-f"></i></a>
+					<a href="https://www.facebook.com/Sentry-Turret-733783123668847"><i class="fab fa-facebook-f" style="color: #D8D8D8;"></i></a>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col footer-bottom">
-					<a class="scroll-link" href="#top-content"><i class="fas fa-chevron-up"></i></a>
+					<img src="assets/img/backgrounds/gray_icon_footer.svg" alt="LogoGray" />
+					<h3 style="color: #D8D8D8; margin-top: 5px;">SentryTurret</h3>
+					<p>Copyright &copy; 2018</p>
 				</div>
 			</div>
 		</div>
