--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -80,8 +80,8 @@
 								is a lightweight, low-cost remotely controlled aiming system for the AT4 Anti-Tank missile launcher.</span></h3>
 					</div>
 					<div class="col-md-12" style="margin-top: 40px;">
-						<a class="scroll-link" href="#">
-							<h3 style="color: #81A14F">READ MORE </span><i class="fas fa-chevron-down"></i></h3>
+						<a class="scroll-link" href="#" style="color: #81A14F; font-family: WorkSans, sans-serif;">
+							</span>READ MORE <i class="fas fa-chevron-down"></i>
 						</a>
 					</div>
 				</div>
