--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -63,7 +63,7 @@
 					</div>
 					<div class="description wow slideInRight">
 						<h2>Aim from distance & stay alive.<br />
-							Surviving has never before been so affordable.
+							Surviving has never been so affordable.
 						</h2>
 					</div>
 				</div>
@@ -241,7 +241,7 @@
 				<div class="col footer-bottom">
 					<img src="assets/img/backgrounds/gray_icon_footer.svg" alt="LogoGray" />
 					<h3 style="color: #D8D8D8; margin-top: 5px;">SentryTurret</h3>
-					<p>Copyright &copy; 2018</p>
+					<p style="margin-top: 30px;">Copyright &copy; 2018</p>
 				</div>
 			</div>
 		</div>
