--- a/sentry-turret-app/src/index.html
+++ b/sentry-turret-app/src/index.html
@@ -61,7 +61,7 @@
 					<div class="wow slideInLeft">
 						<h1>SentryTurret</h1>
 					</div>
-					<div class="description wow slideInRight">
+					<div class="description wow slideInRight" style="margin-top: 50px;">
 						<h2>Aim from distance & stay alive.<br />
 							Surviving has never been so affordable.
 						</h2>
@@ -141,9 +141,9 @@
 				</div>
 				<div class="col-md-8">
 					<div class="description wow fadeInRight" style="text-align: left;">
-						<h3 style="color: white;">
-							"Every single soldier's life matters, let's save that!"
-						</h3>
+						<h2 style="color: white;">
+							"Every single soldier's life matters,<br /> let's save that!"
+						</h2>
 						<p style="color: white;"><strong>Capt. Vladimir Kolotõgin,</strong> Anti-Tank Company Commander</p>
 					</div>
 				</div>
@@ -164,7 +164,7 @@
 			<div class="row" style="padding: 30px;">
 				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
-						<img src="assets/img/backgrounds/Group-4-Copy.svg" alt="1" />
+						<img src="assets/img/backgrounds/NumberIcon_1.png" alt="1" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
 						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Place
@@ -174,7 +174,7 @@
 				</div>
 				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
-						<img src="assets/img/backgrounds/Group-4-Copy-2.svg" alt="2" />
+						<img src="assets/img/backgrounds/NumberIcon_2.png" alt="2" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
 						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Connect
@@ -184,7 +184,7 @@
 				</div>
 				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
-						<img src="assets/img/backgrounds/Group-4-Copy-3.svg" alt="3" />
+						<img src="assets/img/backgrounds/NumberIcon_3.png" alt="3" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
 						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Open
@@ -194,7 +194,7 @@
 				</div>
 				<div class="row col-sm-12 col-md-6" style="margin-top: 40px; display: flex; align-items: center;">
 					<div class="col-sm-2 col-md-2" style="align-self:flex-start;">
-						<img src="assets/img/backgrounds/Group-4-Copy-4.svg" alt="4" />
+						<img src="assets/img/backgrounds/NumberIcon_4.png" alt="4" />
 					</div>
 					<div class="col-sm-10 col-md-10" style="text-align: left; align-self:flex-start;">
 						<p><span style="padding: 3px 5px 3px 5px; background-color: #D8D8D8; color: #4A4A4A; line-height: 1.7;"><strong>Arm
